refactoring components + fixing note alignment feature

--- a/src/app/components/pages/sticky-notes/sticky-note/sticky-note.component.scss
+++ b/src/app/components/pages/sticky-notes/sticky-note/sticky-note.component.scss
@@ -18,6 +18,7 @@
 
 h1, p {
     width: 180px;
+    text-align: center;
 }
 
 .edit-div {
